@@ -86,11 +86,8 @@ PKG		= @GHCPKG@
 # Provide an OpenGL widget.
 ENABLE_OPENGL	= @ENABLE_OPENGL@
 
-# Provide a SourceView widget.
-ENABLE_SOURCEVIEW = @ENABLE_SOURCEVIEW@
-
-# Provide libglade bindings.
-ENABLE_LIBGLADE = @ENABLE_LIBGLADE@
+# Provide gnome bindings.
+ENABLE_GNOME = @ENABLE_GNOME@
 
 # This should be libXXX.a and XXX for Unix and
 #		    XXX.lib and XXX.exe for Windows
